--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <nav>
         <ul class="header-navigation-list">
           <li class="header-navigation-item">
-            <a href="#" class="header-navigation-link">
+            <a href="#" class="header-navigation-link header-navigation-link-current">
               Главная
             </a>
           </li>
@@ -144,8 +144,8 @@
           Только полезная информация и никакого спама, честное бойскаутское!
         </p>
         <form class="footer-subscription-form" action="https://echo.htmlacademy.ru/" method="post">
-          <label for="footer-subscription-email">Ваш e-mail</label>
-          <input id="footer-subscription-email" name="footer-subscription-email" type="email" placeholder="your.email@mail.com" required>
+          <input id="footer-subscription-email" name="footer-subscription-email" type="email" placeholder="Ваш e-mail"
+            required>
           <button class="button footer-subscription-button" type="submit">Подписаться</button>
         </form>
       </section>
