--- a/catalog.html
+++ b/catalog.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>Каталог гостиниц</title>
+    <link rel="stylesheet" href="styles/styles.css"/>
   </head>
 
   <body>
@@ -37,7 +38,7 @@
             </a>
           </li>
           <li class="navigation-user-item">
-            <a class="navigation-user-link" href="#">Хочу сюда!</a>
+            <a class="navigation-user-link button" href="#">Хочу сюда!</a>
           </li>
         </ul>
       </nav>
@@ -47,7 +48,7 @@
       <section class="inner-filter">
         <h1 class="filter-title">Гостиницы Седоны</h1>
         <ul class="breadcrumbs">
-          <li class="breadcrumbs-item">
+          <li class="breadcrumbs-item-main">
             <a class="breadcrumbs-link" href="index.html">
               <span class="visually-hidden">Главная</span>
             </a>
@@ -61,15 +62,15 @@
           <form class="housing-filter" action="https://echo.htmlacademy.ru/" method="get">
             <fieldset class="filter-facilities">
               <legend class="facilities-title">Инфраструктура:</legend>
-              <label>
+              <label class="filter-label">
                 <input name="facilities" value="pool" type="checkbox" checked>
                 Бассейн
               </label>
-              <label>
+              <label class="filter-label">
                 <input name="facilities" value="parking" type="checkbox" checked>
                 Парковка
               </label>
-              <label>
+              <label class="filter-label">
                 <input name="facilities" value="wifi" type="checkbox">
                 Wi-Fi
               </label>
@@ -77,15 +78,15 @@
 
             <fieldset class="filter-housing-type">
               <legend class="housing-type-title">Тип Жилья:</legend>
-              <label>
+              <label class="filter-label">
                 <input name="housing_type" value="hotel" type="radio">
                 Гостиница
               </label>
-              <label>
+              <label class="filter-label">
                 <input name="housing_type" value="motel" type="radio" checked>
                 Мотель
               </label>
-              <label>
+              <label class="filter-label">
                 <input name="housing_type" value="apartments" type="radio">
                 Апартаменты
               </label>
@@ -94,22 +95,22 @@
             <fieldset class="filter-price">
               <legend class="price-title">Стоимость, ₽:</legend>
               <div class="price-inputs">
-                <label>
+                <label class="price-range-label">
                   <input id="price_min" type="number" name="price_min" min="0" value="0"
                     class="price-range">
                   от
                 </label>
-                <label>
+                <label class="price-range-label">
                   <input id="price_max" type="number" name="price_max" min="0" value="9000"
                     class="price-range">
                   до
                 </label>
               </div>
               <div class="price-line">
-                <button class="min-price-setter">
+                <button class="price-setter">
                   <span class="visually-hidden">Выбрать минимальную цену</span>
                 </button>
-                <button class="max-price-setter">
+                <button class="price-setter">
                   <span class="visually-hidden">Выбрать максимальную цену</span>
                 </button>
               </div>
@@ -139,21 +140,21 @@
         </select>
         <ul class="housing-list-view">
           <li>
-            <a class="button" href="#">
+            <a class="view-cards" href="#">
               <span class="visually-hidden">
                 Карточки
               </span>
             </a>
           </li>
           <li>
-            <a class="button" href="#">
+            <a class="view-individual" href="#">
               <span class="visually-hidden">
                 По одному
               </span>
             </a>
           </li>
           <li>
-            <a class="button" href="#">
+            <a class="view-list" href="#">
               <span class="visually-hidden">
                 Список
               </span>
@@ -167,8 +168,10 @@
               <img class="item-image" src="img/catalog/amara-resort-spa.jpg" width="300" height="212" alt="Ущелье и небо.">
               <h3 class="item-title">Amara Resort & Spa</h3>
             </a>
-            <span class="item-type">Гостиница</span>
-            <span class="item-price">От 4000 ₽</span>
+            <div class="item-type-price">
+              <span class="item-type">Гостиница</span>
+              <span class="item-price">От 4000 ₽</span>
+            </div>
             <a class="button button-more" href="#">Подробнее</a>
             <a class="button button-favorite" href="#">В избранное</a>
             <p class="stars stars-four">
@@ -181,8 +184,10 @@
               <img class="item-image" src="img/catalog/villas-at-poco-diablo.jpg" width="300" height="212" alt="Горы и небо на закате.">
               <h3 class="item-title">Villas at Poco Diablo</h3>
             </a>
-            <span class="item-type">Гостиница</span>
-            <span class="item-price">От 5000 ₽</span>
+            <div class="item-type-price">
+              <span class="item-type">Гостиница</span>
+              <span class="item-price">От 5000 ₽</span>
+            </div>
             <a class="button button-more" href="#">Подробнее</a>
             <a class="button button-favorite button-selected" href="#">В избранном</a>
             <p class="stars stars-four">
@@ -195,8 +200,10 @@
               <img class="item-image" src="img/catalog/desert-quail-inn.jpg" width="300" height="212" alt="Горы и небо днём.">
               <h3 class="item-title">Desert Quail Inn</h3>
             </a>
-            <span class="item-type">Гостиница</span>
-            <span class="item-price">От 2500 ₽</span>
+            <div class="item-type-price">
+              <span class="item-type">Гостиница</span>
+              <span class="item-price">От 2500 ₽</span>
+            </div>
             <a class="button button-more" href="#">Подробнее</a>
             <a class="button button-favorite" href="#">В избранное</a>
             <p class="stars stars-three">
@@ -209,8 +216,10 @@
               <img class="item-image" src="img/catalog/greentree-inn.jpg" width="300" height="212" alt="Небо и горы в оранжевом свечении.">
               <h3 class="item-title">GreenTree Inn</h3>
             </a>
-            <span class="item-type">Гостиница</span>
-            <span class="item-price">От 1500 ₽</span>
+            <div class="item-type-price">
+              <span class="item-type">Гостиница</span>
+              <span class="item-price">От 1500 ₽</span>
+            </div>
             <a class="button button-more" href="#">Подробнее</a>
             <a class="button button-favorite" href="#">В избранное</a>
             <p class="stars stars-two">
@@ -225,7 +234,7 @@
         <h2 class="visually hidden">Список страниц</h2>
         <ul class="pagination-list">
           <li class="pagination-item">
-            <a class="pagination-link pagination-prev pagination-disabled" href="#">1</a>
+            <a class="pagination-link pagination-prev" href="#">1</a>
           </li>
           <li class="pagination-item">
             <a class="pagination-link" href="#">2</a>
@@ -255,7 +264,7 @@
         <p class="footer-subscription-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form class="footer-subscription-form" action="https://echo.htmlacademy.ru/" method="post">
           <input id="footer-subscription-email" name="email" type="email" placeholder="Ваш e-mail" required>
-          <button class="button footer-subscription-button" type="submit">Подписаться</button>
+          <button class="footer-subscription-button" type="submit">Подписаться</button>
         </form>
       </section>
 
@@ -263,7 +272,7 @@
         <h2 class="visually-hidden">Ищите нас в социальных сетях</h2>
         <ul class="footer-social-list">
           <li class="footer-social-item">
-            <a class="button" href="https://vk.com/htmlacademy">
+            <a class="social-button" href="https://vk.com/htmlacademy">
               <svg width="25" height="15" viewBox="0 0 25 15" fill="none" role="img" aria-label="VK" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
                   d="M24.1164 1.80445C24.2824 1.25845 24.1164 0.856445 23.3214 0.856445H20.6964C20.0284 0.856445 19.7204 1.20345 19.5534 1.58645C19.5534 1.58645 18.2184 4.78245 16.3274 6.85845C15.7154 7.46045 15.4374 7.65145 15.1034 7.65145C14.9364 7.65145 14.6854 7.46045 14.6854 6.91345V1.80445C14.6854 1.14845 14.5014 0.856445 13.9454 0.856445H9.81738C9.40038 0.856445 9.14938 1.16045 9.14938 1.44945C9.14938 2.07045 10.0954 2.21445 10.1924 3.96245V7.76045C10.1924 8.59345 10.0394 8.74444 9.70538 8.74444C8.81538 8.74444 6.65038 5.53345 5.36538 1.85945C5.11638 1.14445 4.86438 0.856445 4.19338 0.856445H1.56638C0.816382 0.856445 0.666382 1.20345 0.666382 1.58645C0.666382 2.26845 1.55638 5.65645 4.81138 10.1374C6.98138 13.1974 10.0364 14.8564 12.8194 14.8564C14.4884 14.8564 14.6944 14.4884 14.6944 13.8534V11.5404C14.6944 10.8034 14.8524 10.6564 15.3814 10.6564C15.7714 10.6564 16.4384 10.8484 17.9964 12.3234C19.7764 14.0724 20.0694 14.8564 21.0714 14.8564H23.6964C24.4464 14.8564 24.8224 14.4884 24.6064 13.7604C24.3684 13.0364 23.5184 11.9854 22.3914 10.7384C21.7794 10.0284 20.8614 9.26345 20.5824 8.88045C20.1934 8.38945 20.3044 8.17044 20.5824 7.73345C20.5824 7.73345 23.7824 3.30745 24.1154 1.80445H24.1164Z"
@@ -272,7 +281,7 @@
             </a>
           </li>
           <li class="footer-social-item">
-            <a class="button" href="https://t.me/htmlacademy">
+            <a class="social-button" href="https://t.me/htmlacademy">
               <svg width="18" height="16" viewBox="0 0 18 16" fill="none" role="img" aria-label="Telegram" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M16.785 0.955705L0.840489 7.1042C-0.247661 7.54126 -0.241365 8.14828 0.640845 8.41897L4.73445 9.69597L14.2058 3.72014C14.6537 3.44766 15.0629 3.59424 14.7265 3.89281L7.05283 10.8183H7.05103L7.05283 10.8192L6.77045 15.0387C7.18413 15.0387 7.36669 14.8489 7.59871 14.625L9.58705 12.6915L13.7229 15.7464C14.4855 16.1664 15.0332 15.9506 15.2229 15.0405L17.9379 2.2453C18.2158 1.13107 17.5126 0.626562 16.785 0.955705Z"
@@ -281,7 +290,7 @@
             </a>
           </li>
           <li class="footer-social-item">
-            <a class="button" href="https://www.youtube.com/user/htmlacademyru">
+            <a class="social-button" href="https://www.youtube.com/user/htmlacademyru">
               <svg width="23" height="18" viewBox="0 0 23 18" fill="none" role="img" aria-label="YouTube" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M18.9402 0.356445H3.50738C1.64668 0.356445 0.333252 1.9502 0.333252 3.75645V13.8502C0.333252 15.7627 1.64668 17.3564 3.50738 17.3564H19.1591C20.8009 17.3564 22.3333 15.7627 22.3333 13.9564V3.75645C22.1143 1.9502 20.8009 0.356445 18.9402 0.356445ZM7.99494 12.8939V4.81894L15.3283 8.85645L7.99494 12.8939Z"
