Module 5: add sticky footer and flex header

--- a/catalog.html
+++ b/catalog.html
@@ -9,11 +9,10 @@
 
   <body>
     <header class="page-header">
-      <a href="index.html" class="logo-link">
-        <img class="logo-img" src="img/logo.svg" width="140" height="70" alt="Логотип Седоны.">
-      </a>
-
-      <nav>
+      <nav class="navigation">
+        <a href="index.html" class="logo-link">
+          <img class="logo-img" src="img/logo.svg" width="140" height="70" alt="Логотип Седоны.">
+        </a>
         <ul class="navigation-list">
           <li class="navigation-item">
             <a href="index.html" class="navigation-link">Главная</a>
@@ -44,7 +43,7 @@
       </nav>
     </header>
 
-    <main class="main-inner">
+    <main class="main-container main-inner">
       <section class="inner-filter">
         <h1 class="filter-title">Гостиницы Седоны</h1>
         <ul class="breadcrumbs">
