--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
 
   <body>
     <header class="page-header">
-      <a href="index.html" class="logo-link">
-        <img class="logo-img" src="img/logo.svg" width="140" height="70" alt="Логотип Седоны.">
-      </a>
-
-      <nav>
+      <nav class="navigation">
+        <a href="index.html" class="logo-link">
+          <img class="logo-img" src="img/logo.svg" width="140" height="70" alt="Логотип Седоны.">
+        </a>
         <ul class="navigation-list">
           <li class="navigation-item">
             <a href="index.html" class="navigation-link navigation-link-current">Главная</a>
@@ -44,7 +43,7 @@
       </nav>
     </header>
 
-    <main class="main-page">
+    <main class="main-container main-page">
       <section class="welcome">
         <h2 class="visually-hidden">Добро пожаловать в Седону!</h2>
         <img class="welcome-img" src="img/main/welcome.svg" width="458" height="352" alt="Добро пожаловать в Седону!">
