pixel perfect for header and welcome section on main page

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
           </ul>
           <ul class="navigation-user modified-ul">
             <li class="navigation-user-item">
-              <a class="navigation-user-link" href="#">
+              <a class="navigation-user-link link-search" href="#">
                 <span class="visually-hidden">Поиск</span>
               </a>
             </li>
             <li class="navigation-user-item">
-              <a class="navigation-user-link" href="#">
+              <a class="navigation-user-link link-fav" href="#">
                 <span class="visually-hidden">Избранное</span>
                 <span class="fav-count">12</span>
               </a>
