--- a/catalog.html
+++ b/catalog.html
@@ -16,23 +16,23 @@
           </a>
           <ul class="navigation-list modified-ul">
             <li class="navigation-item">
-              <a href="index.html" class="navigation-link navigation-link-current">Главная</a>
+              <a href="index.html" class="navigation-link">Главная</a>
             </li>
             <li class="navigation-item">
               <a href="#" class="navigation-link">О Седоне</a>
             </li>
             <li class="navigation-item">
-              <a href="catalog.html" class="navigation-link">Гостиницы</a>
+              <a href="catalog.html" class="navigation-link navigation-link-current">Гостиницы</a>
             </li>
           </ul>
           <ul class="navigation-user modified-ul">
             <li class="navigation-user-item">
-              <a class="navigation-user-link" href="#">
+              <a class="navigation-user-link link-search" href="#">
                 <span class="visually-hidden">Поиск</span>
               </a>
             </li>
             <li class="navigation-user-item">
-              <a class="navigation-user-link" href="#">
+              <a class="navigation-user-link link-fav" href="#">
                 <span class="visually-hidden">Избранное</span>
                 <span class="fav-count">12</span>
               </a>
