decoration elements for main page and pixel perfect for it

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <ul class="reasons-list modified-ul">
               <li class="reasons-item-block reasons-town">
                 <div class="reasons-description-wrapper">
-                  <h3 class="reasons-item-title">Настоящий городок</h3>
+                  <h3 class="reasons-item-title white-item-title">Настоящий городок</h3>
                   <p class="reasons-item-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
                 </div>
                 <div class="reasons-image-wrapper">
@@ -79,7 +79,7 @@
               </li>
               <li class="reasons-item-block reasons-bridge">
                 <div class="reasons-description-wrapper">
-                  <h3 class="reasons-item-title">Там есть мост дьявола</h3>
+                  <h3 class="reasons-item-title white-item-title">Там есть мост дьявола</h3>
                   <p class="reasons-item-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
                 </div>
                 <div class="reasons-image-wrapper">
@@ -96,16 +96,16 @@
             </div>
             <ul class="services-list modified-ul">
               <li class="services-item item-housing">
-                <h3 class="services-item-title">Жильё</h3>
-                <p class="services-item-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+                <h3 class="services-item-title title-housing">Жильё</h3>
+                <p class="services-item-description housing-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
               </li>
               <li class="services-item item-food">
-                <h3 class="services-item-title">Еда</h3>
-                <p class="services-item-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+                <h3 class="services-item-title title-food">Еда</h3>
+                <p class="services-item-description">Всегда заказывайте <br> топовый фирменный бургер, вы не разочаруетесь!</p>
               </li>
               <li class="services-item item-souvenir">
-                <h3 class="services-item-title">Сувениры</h3>
-                <p class="services-item-description">Не только китайского, но и настоящего местного производства!</p>
+                <h3 class="services-item-title title-souvenir">Сувениры</h3>
+                <p class="services-item-description">Не только китайского, <br> но и настоящего местного производства!</p>
               </li>
             </ul>
           </section>
